<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matyena.tresenrayafinal.MainActivity">

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <Button
            android:id="@+id/bJugar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="160dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="108dp"
            android:text="@string/botonJugar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bPuntuaciones"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="160dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="188dp"
            android:text="@string/botonPuntuaciones"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bAyuda"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="160dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="268dp"
            android:text="@string/botonAyuda"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
