<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_black">

        <EditText
            android:id="@+id/editText"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="Introduce las Partidas"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:text="@string/tituloPartidas"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bIndividual"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginTop="45dp"
            android:text="@string/botonIndividual"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bMultijugador"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignEnd="@+id/editText"
            android:layout_alignRight="@+id/editText"
            android:layout_alignTop="@+id/bIndividual"
            android:text="@string/botonMultijugador"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>