<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_black">

        <TextView
            android:id="@+id/titulo"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="124dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/tituloAyuda"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="59dp" />

        <TextView
            android:id="@+id/punto1"
            android:layout_width="310dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/titulo"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="65dp"
            android:text="@string/punto1"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/npunto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/npunto4"
            android:layout_alignStart="@+id/npunto4"
            android:layout_below="@+id/npunto4"
            android:text="3"
            android:textColor="@color/colorPrimary"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/npunto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/npunto"
            android:layout_alignStart="@+id/npunto"
            android:layout_below="@+id/npunto"
            android:text="2"
            android:textColor="@color/colorPrimary"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/npunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/punto1"
            android:layout_toLeftOf="@+id/punto1"
            android:layout_toStartOf="@+id/punto1"
            android:text="1"
            android:textColor="@color/colorPrimary"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/punto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/npunto1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:text="@string/punto2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="310dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@+id/punto2"
            android:layout_alignStart="@+id/punto2"
            android:layout_below="@+id/npunto4"
            android:layout_marginTop="12dp"
            android:text="@string/punto3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>